server: extract re-exec into a stateless ns + test the arg contract
Adds the test a7510e0 designed for (build-reexec-cmd is pure exactly so
the arg-preservation contract is checkable without forking a JVM): the
operator JVM args must ride BEFORE -jar — anything after -jar is a
program argument, so an ordering regression would silently downgrade
java -Xmx8g -jar plaid.jar to the default heap — and the canonical-flag
filter must be exact-match so an unrelated --add-opens passes through.

Testing it surfaced a trap: requiring plaid.server.main from a test ns
transitively registers EVERY mount defstate (http-server included) in
the JVM-wide registry, which changes what a bare (mount/start) in other
tests brings up — the three full-mount lifecycle tests started booting
the real http-kit server under a test config (nil media section → NPE
at the max-body computation). The re-exec machinery now lives in
plaid.server.reexec, which requires nothing stateful; main.clj keeps
only arg parsing, the shutdown hook, and mount wiring. Verbatim code
move otherwise.

Full suite: 663 tests, 5551 assertions, 0 failures.